--- a/rtl/android/Makefile.fpc
+++ b/rtl/android/Makefile.fpc
@@ -22,7 +22,7 @@ rsts=math  typinfo  sysconst rtlconsts
 nortl=y
 
 [clean]
-units=syslinux $(LINUXUNIT)
+units=$(LINUXUNIT)
 
 [install]
 fpcpackage=y
